[gd_scene load_steps=5 format=3 uid="uid://cgdvulybuoskq"]

[ext_resource type="Script" path="res://scenes/ui/ammo_display.gd" id="1_ftott"]
[ext_resource type="Texture2D" uid="uid://binlv4lrq48os" path="res://assets/img/health_symbol.png" id="1_w468b"]
[ext_resource type="Texture2D" uid="uid://bvlg1brkgx58r" path="res://assets/img/bullet_symbol.png" id="2_c6e8w"]
[ext_resource type="Theme" uid="uid://c5b5s8rvc7pcy" path="res://resources/themes/theme_hud.tres" id="3_gwcvt"]

[node name="AmmoDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_ftott")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
offset_right = 40.0
offset_bottom = 50.0

[node name="HealthContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HealthContainer"]
layout_mode = 2
texture = ExtResource("1_w468b")
expand_mode = 2
stretch_mode = 3

[node name="HealthLabel" type="Label" parent="VBoxContainer/HealthContainer"]
layout_mode = 2
theme = ExtResource("3_gwcvt")
text = "100"

[node name="AmmoContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/AmmoContainer"]
layout_mode = 2
texture = ExtResource("2_c6e8w")
expand_mode = 2
stretch_mode = 3

[node name="AmmoLabel" type="Label" parent="VBoxContainer/AmmoContainer"]
layout_mode = 2
theme = ExtResource("3_gwcvt")
text = "100"
